# slam

./: .gitignore  CMakeLists.txt  README.md  preproc.ipynb  specification.md  specification_pt1.md
NotinhasCrucxs/: SLAM Proj.md
datasets/: airplane_small.off  airplane_smaller.off  dataset_static.mat
docs/: off_file_format.md
docs/notes/NotinhasCrucxs/: README.md
docs/notes/NotinhasIrao/: README.md  notes_position.md
docs/part1/: specification_pt1.md
docs/part_1/: SLAM_Pt.1_Demo.pptx  SLAM_Pt.1_Empiri.pptx  SLAM_Pt.1_Intro_DS.pptx  specification_pt1.md
docs/part_1/benchmarks/: bresenham_raycast.txt  dda_raycast.txt  insert_no_search.txt  insert_search.txt  insert_search_concentrated.txt  insert_search_concentrated2.txt
docs/part_2/: SLAM_Pt.2_Empirical_Analisys.pptx  specification_pt2.md
docs/part_2/benchmarks/: Untitled.ipynb  benchmark_cppset_merge.txt  benchmark_set_insert_dups_doublehash.txt  benchmark_set_insert_dups_linear.txt  benchmark_set_insert_dups_quad.txt  benchmark_set_insert_nodups_doublehash.txt  benchmark_set_insert_nodups_linear.txt  benchmark_set_insert_nodups_quad.txt  benchmark_set_insert_nodups_quad_inplace.txt  benchmark_set_insert_nodups_quad_reserve.txt  benchmark_set_lookup_existing.txt  benchmark_set_lookup_existing_100000.txt  benchmark_set_lookup_existing_200000.txt  benchmark_set_lookup_existing_300000.txt  benchmark_set_lookup_existing_400000.txt  benchmark_set_lookup_existing_500000.txt  benchmark_set_lookup_existing_600000.txt  benchmark_set_lookup_existing_700000.txt  benchmark_set_lookup_existing_800000.txt  benchmark_set_lookup_existing_900000.txt  benchmark_set_lookup_nonexisting.txt  benchmark_set_lookup_nonexisting_100000.txt  benchmark_set_lookup_nonexisting_200000.txt  benchmark_set_lookup_nonexisting_300000.txt  benchmark_set_lookup_nonexisting_400000.txt  benchmark_set_lookup_nonexisting_500000.txt  benchmark_set_lookup_nonexisting_600000.txt  benchmark_set_merge.txt  benchmark_set_merge_dups.txt  benchmark_set_merge_dups_resize.txt  benchmark_set_merge_resize.txt
slam/include/: Scan.h
slam/include/HashTable/: HashTable.h  HashTableIterator.h  TableEntry.h
slam/include/HashTable/strategies/: DoubleHashingStrategy.h  HashStrategy.h  LinearHashStrategy.h  QuadraticHashStrategy.h
slam/include/hash_table/: HashTable.h  HashTableIterator.h  TableEntry.h
slam/include/hash_table/strategies/: DoubleHashingStrategy.h  HashStrategy.h  QuadraticHashStrategy.h
slam/include/localization/: Localization.h  NeighborNode.h  Observation.h  Particle.h
slam/include/octomap/: OcNode.h  OcNodeKey.h  OcNodeKey.hxx  Ocnode.h  Octomap.h  OctomapIterator.h  Scan.h  Vector3.h
slam/include/parallel_hashmap/: btree.h
slam/include/scan/: Filters.h  Scan.h
slam/include/sonar/: Beam.h  Filters.h  Scan.h  Sonar.h  Sweep.h
slam/src/: Localization.cpp  OcNode.cpp  OcNodeKey.cpp  Ocnode.cpp  Octomap.cpp  Scan.cpp  Sonar.cpp  main.cpp
slam/src/sonar/: Beam.cpp  Scan.cpp  Sonar.cpp  Sweep.cpp
